--- a/LaMiaPizzeria/wwwroot/css/site.css
+++ b/LaMiaPizzeria/wwwroot/css/site.css
@@ -16,3 +16,16 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.fontsize_large {
+    font-size: 24px;
+}
+
+.background_color_orange {
+    background-color: orange;
+}
+
+.img_square {
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+}
