--- a/LaMiaPizzeria/Views/Home/Index.cshtml
+++ b/LaMiaPizzeria/Views/Home/Index.cshtml
@@ -2,7 +2,125 @@
     Layout = null;
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!doctype html>
+<html lang="en">
+    <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>La Mia Pizzeria</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="~/css/site.css" rel="stylesheet" />
+</head>
+ <!-- BODY--> 
+<body>
+    <!-- HEADER -->
+    <header>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+                <span class="navbar-brand mb-0 fs_large">Luigi's Pizza</span>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+
+        <div class="container mt-5">
+            <img class="img-fluid img_square" src="/img/sfondo_menu.png" alt="Sfondo Menu">
+                <div class="col-12">
+                    <h3>Lista degli articoli</h3>
+                </div>
+            </div>
+            <div class="row my-3">
+                <div class="col-12">
+
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th scope="col">Pizza</th>
+                                <th scope="col">Descrizione</th>
+                                <th scope="col">Illustrazione Rappresentativa</th>
+                                <th scope="col">Prezzo</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Margherita</th>
+                                <td></td>
+                                <td><img class="img-fluid img_square" src="https://picsum.photos/id/5/200/200" alt="Immagine apple vs Microsoft"></td>
+                                <td>Apple le aziende tecnologiche, presentare i propri prodotti e servizi in modo interessante è essenziale. Quindi il content marketing </td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row">2</th>
+                                <td><img class="img-fluid img_square" src="https://www.smartworld.it/images/2023/05/10/google-bard-io_880x495.png" alt="Immagine Google Bard"></td>
+                                <td>Google Bard</td>
+                                <td>
+                                    Google Bard, la prima IA generativa pubblica di BigG, è stato lanciato in 180 paesi nel mondo, ma non in Italia al momento, eppure c'è un modo semplice per accedere a Bard, già adesso, nel nostro paese: usare una VPN (se non sapeste cos'è e come funziona una VPN vi rimandiamo al nostro articolo in merito).
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row">3</th>
+                                <td><img class="img-fluid img_square" src="https://www.laleggepertutti.it/wp-content/uploads/2023/04/ChatGPT-360x240.jpeg" alt="Come connettersi a Chat GPT anche dopo il blocco"></td>
+                                <td>Chat GPT diventa stylish</td>
+                                <td>
+                                    Dare vita al proprio stile personale, quando non si è affiancati da consulenti di immagine, è innanzitutto una questione di sperimentazione: l'Intelligenza Artificiale, secondo un recente trend avvistato su TikTok, potrebbe rivelarsi una grande alleata in tal senso.
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row">4</th>
+                                <td><img class="img-fluid img_square" src="~/img/bing.png" alt="Immagine logo Bing"></td>
+                                <td>Bing integra CHat GPT nel suo motore</td>
+                                <td>
+                                    Grande rivoluzione per Bing che in collaborazione con Open AI ...
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row">5</th>
+                                <td><img class="img-fluid img_square" src="~/img/bing.png" alt="Immagine logo Bing"></td>
+                                <td>Bing integra CHat GPT nel suo motore</td>
+                                <td>
+                                    Grande rivoluzione per Bing che in collaborazione con Open AI ...
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row">6</th>
+                                <td><img class="img-fluid img_square" src="~/img/bing.png" alt="Immagine logo Bing"></td>
+                                <td>Bing integra CHat GPT nel suo motore</td>
+                                <td>
+                                    Grande rivoluzione per Bing che in collaborazione con Open AI ...
+                                </td>
+                            </tr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
+        </div>
+
+    </main>
+
+    <footer>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+</body>
+</html>
