--- a/LaMiaPizzeria/Views/Home/Index.cshtml
+++ b/LaMiaPizzeria/Views/Home/Index.cshtml
@@ -10,14 +10,23 @@
     <title>La Mia Pizzeria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="~/css/site.css" rel="stylesheet" />
+
+    <style>
+        body {
+            background-image: url("/img/sfondo_menu.png");
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
+
 </head>
  <!-- BODY--> 
 <body>
     <!-- HEADER -->
     <header>
         <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid">
-                <span class="navbar-brand mb-0 fs_large">Luigi's Pizza</span>
+            <div class="container-fluid background_color_orange">
+                <span class="navbar-brand mb-0 fs_large">&#127813;-L u i g i 's     P i z z a-&#x1F355;</span>
             </div>
         </nav>
     </header>
@@ -25,84 +34,50 @@
     <main>
 
         <div class="container mt-5">
-            <img class="img-fluid img_square" src="/img/sfondo_menu.png" alt="Sfondo Menu">
                 <div class="col-12">
-                    <h3>Lista degli articoli</h3>
-                </div>
+                <h3 style="color: darkorange; font-family: 'Pacifico', cursive;">MENU' DELLE PIZZE'</h3>
+            </div>
             </div>
             <div class="row my-3">
                 <div class="col-12">
 
-                    <table class="table table-striped">
+                    <table class="table">
                         <thead>
-                            <tr>
-                                <th scope="col">Pizza</th>
-                                <th scope="col">Descrizione</th>
+                        <tr style="color: red; font-weight: bold">
+                            <th scope="col">Pizza &#x1F355</th>
+                            <th scope="col">Ingredienti &#128221;</th>
                                 <th scope="col">Illustrazione Rappresentativa</th>
                                 <th scope="col">Prezzo</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                        <tr style="color: darkorange; font-weight: bold">
                                 <th scope="row">Margherita</th>
-                                <td></td>
-                                <td><img class="img-fluid img_square" src="https://picsum.photos/id/5/200/200" alt="Immagine apple vs Microsoft"></td>
-                                <td>Apple le aziende tecnologiche, presentare i propri prodotti e servizi in modo interessante è essenziale. Quindi il content marketing </td>
+                                <td>Pomodoro e Mozzarella</td>
+                            <td><img class="img-fluid img_square" src="~/img/margherita.png" alt="Immagine logo Bing"></td>
+                                <td> 5.50 €</td>
                             </tr>
 
-                            <tr>
-                                <th scope="row">2</th>
-                                <td><img class="img-fluid img_square" src="https://www.smartworld.it/images/2023/05/10/google-bard-io_880x495.png" alt="Immagine Google Bard"></td>
-                                <td>Google Bard</td>
-                                <td>
-                                    Google Bard, la prima IA generativa pubblica di BigG, è stato lanciato in 180 paesi nel mondo, ma non in Italia al momento, eppure c'è un modo semplice per accedere a Bard, già adesso, nel nostro paese: usare una VPN (se non sapeste cos'è e come funziona una VPN vi rimandiamo al nostro articolo in merito).
-                                </td>
-                            </tr>
+                        <tr style="color: yellow; font-weight: bold">
+                            <th scope="row">Marinara</th>
+                            <td>Pomodoro, Aglio, Prezzemolo</td>
+                            <td><img class="img-fluid img_square" src="~/img/marinara.png" alt="Immagine logo Bing"></td>
+                            <td> 5.00 €</td>
+                        </tr>
 
-                            <tr>
-                                <th scope="row">3</th>
-                                <td><img class="img-fluid img_square" src="https://www.laleggepertutti.it/wp-content/uploads/2023/04/ChatGPT-360x240.jpeg" alt="Come connettersi a Chat GPT anche dopo il blocco"></td>
-                                <td>Chat GPT diventa stylish</td>
-                                <td>
-                                    Dare vita al proprio stile personale, quando non si è affiancati da consulenti di immagine, è innanzitutto una questione di sperimentazione: l'Intelligenza Artificiale, secondo un recente trend avvistato su TikTok, potrebbe rivelarsi una grande alleata in tal senso.
-                                </td>
-                            </tr>
+                        <tr style="color: darkorange; font-weight: bold">
+                            <th scope="row">Capricciosa</th>
+                            <td>Pomodoro, Mozzarella, Funghi, Cotto, Carciofini</td>
+                            <td><img class="img-fluid img_square" src="~/img/capricciosa.png" alt="Immagine logo Bing"></td>
+                            <td> 6.50 €</td>
+                        </tr>
 
-                            <tr>
-                                <th scope="row">4</th>
-                                <td><img class="img-fluid img_square" src="~/img/bing.png" alt="Immagine logo Bing"></td>
-                                <td>Bing integra CHat GPT nel suo motore</td>
-                                <td>
-                                    Grande rivoluzione per Bing che in collaborazione con Open AI ...
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <th scope="row">5</th>
-                                <td><img class="img-fluid img_square" src="~/img/bing.png" alt="Immagine logo Bing"></td>
-                                <td>Bing integra CHat GPT nel suo motore</td>
-                                <td>
-                                    Grande rivoluzione per Bing che in collaborazione con Open AI ...
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <th scope="row">6</th>
-                                <td><img class="img-fluid img_square" src="~/img/bing.png" alt="Immagine logo Bing"></td>
-                                <td>Bing integra CHat GPT nel suo motore</td>
-                                <td>
-                                    Grande rivoluzione per Bing che in collaborazione con Open AI ...
-                                </td>
-                            </tr>
-
-
-
-
-
-
-
-
-
+                        <tr style="color: yellow; font-weight: bold">
+                            <th scope="row">Diavola</th>
+                            <td>Pomodoro, Mozzarella, Salame Piccante</td>
+                            <td><img class="img-fluid img_square" src="~/img/diavola.png" alt="Immagine logo Bing"></td>
+                            <td> 6.00 €</td>
+                        </tr>
 
 
 
